# dci-module-www

./: CMakeLists.txt
aux/: enumSupport-gen.cpp
idl/: channel.idl  www.idl
idl/http/: error.idl  firstLine.idl  header.idl  message.idl
idl/http/client/: channel.idl  request.idl  response.idl
idl/http/server/: channel.idl  request.idl  response.idl
idl/http2/: header.idl  message.idl  stream.idl
idl/http2/client/: channel.idl  request.idl  response.idl
idl/http2/server/: channel.idl  request.idl  response.idl
idl/tls/client/: channel.idl
idl/ws/: channel.idl  message.idl
idl/www/: channel.idl  unreliable.idl
idl/www/http/: error.idl  header.idl  message.idl
idl/www/http/client/: channel.idl  request.idl  response.idl
idl/www/http/server/: channel.idl  request.idl  response.idl
idl/www/http2/: message.idl
idl/www/http2/client/: channel.idl  request.idl  response.idl
idl/www/http2/server/: channel.idl  request.idl  response.idl
idl/www/tls/: channel.idl
idl/www/tls/server/: channel.idl
idl/www/ws/: channel.idl  message.idl
src/: channelSoftClosing.cpp  channelSoftClosing.hpp  entry.cpp  enumSupport.hpp  factory.cpp  factory.hpp  pch.hpp
src/http/: inputSlicer.hpp  inputSlicer.ipp
src/http/client/: channel.cpp  channel.hpp  request.cpp  request.hpp  response.cpp  response.hpp
src/http/compress/: br.cpp  br.hpp  direction.hpp  ioRoller.hpp  none.cpp  none.hpp  zlib.cpp  zlib.hpp  zstd.cpp  zstd.hpp
src/http/inputSlicer/: accumuleUntil.hpp  accumuleUntil.ipp  accumuler.hpp  accumuler.ipp  mode.hpp  result.hpp  sourceAdapter.cpp  sourceAdapter.hpp  state.cpp  state.hpp
src/http/inputSlicer/decompressor/: br.cpp  br.hpp  compress.cpp  compress.hpp  deflate.cpp  deflate.hpp  gzip.cpp  gzip.hpp  none.cpp  none.hpp  zstd.cpp  zstd.hpp
src/http/server/: channel.cpp  channel.hpp  request.cpp  request.hpp  response.cpp  response.hpp
src/http2/client/: channel.cpp  channel.hpp
src/http2/server/: channel.cpp  channel.hpp
src/io/: base.hpp  base.ipp  inputBase.hpp  inputBase.ipp  inputProcessResult.hpp  outputBase.hpp  outputBase.ipp  plexus.hpp  plexus.ipp
src/tls/client/: channel.cpp  channel.hpp
src/tls/server/: channel.cpp  channel.hpp
src/ws/: channel.cpp  channel.hpp
test/: client.cpp  probe.cpp  server.cpp
